--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "image": "mcr.microsoft.com/devcontainers/universal:2",
     "postCreateCommand": "bash .devcontainer/post-create.sh",
+    //"postStartCommand": "bash .devcontainer/post-start.sh",
     "customizations": {
         "vscode": {
             "extensions": [
